syntax = "proto3";
package core.solo.io;
option go_package = "github.com/solo-io/solo-kit/pkg/api/v1/resources/core";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

// A way to reference resources across namespaces
// TODO(ilackarms): make upstreamname and secretref into ResourceRefs
message ResourceRef {
    string name = 1;
    string namespace = 2;
}