syntax = "proto3";
package gateway.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gateway/pkg/api/v1";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;

import "github.com/solo-io/solo-kit/api/v1/metadata.proto";
import "github.com/solo-io/solo-kit/api/v1/status.proto";
import "github.com/solo-io/solo-kit/api/v1/ref.proto";
import "github.com/solo-io/solo-kit/api/v1/solo-kit.proto";

import "github.com/solo-io/gloo/projects/gateway/api/v1/http_gateway.proto";

import "github.com/solo-io/gloo/projects/gloo/api/v1/ssl/ssl.proto";

import "github.com/solo-io/gloo/projects/gloo/api/external/envoy/config/core/v3/address.proto";


/*
A MatchableHttpGateway describes a single FilterChain configured with:
- The HttpConnectionManager NetworkFilter
- A FilterChainMatch and TransportSocket that support TLS configuration and Source IP matching

A Gateway CR may select one or more MatchableHttpGateways on a single listener.
This enables separate teams to own Listener configuration (Gateway CR)
and FilterChain configuration (MatchableHttpGateway CR)
*/
message MatchableHttpGateway {

  option (core.solo.io.resource).short_name = "hgw";
  option (core.solo.io.resource).plural_name = "http_gateways";

  // NamespacedStatuses indicates the validation status of this resource.
  // NamespacedStatuses is read-only by clients, and set by gateway during validation
  core.solo.io.NamespacedStatuses namespaced_statuses = 1 [(extproto.skip_hashing) = true];

  // Metadata contains the object metadata for this resource
  core.solo.io.Metadata metadata = 2;

  message Matcher {
    // CidrRange specifies an IP Address and a prefix length to construct the subnet mask for a CIDR range.
    // See https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/core/v3/address.proto#envoy-v3-api-msg-config-core-v3-cidrrange
    repeated .solo.io.envoy.config.core.v3.CidrRange source_prefix_ranges = 1;

    // Ssl configuration applied to the FilterChain:
    //  - FilterChainMatch: https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/listener/v3/listener_components.proto#config-listener-v3-filterchainmatch)
    //  - TransportSocket: https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/core/v3/base.proto#envoy-v3-api-msg-config-core-v3-transportsocket
    gloo.solo.io.SslConfig ssl_config = 2;
  }

  // Matcher creates a FilterChainMatch and TransportSocket for a FilterChain
  // For each MatchableHttpGateway on a Gateway CR, the matcher must be unique.
  // If there are any identical matchers, the Gateway will be rejected.
  // An empty matcher will produce an empty FilterChainMatch (https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/listener/v3/listener_components.proto#envoy-v3-api-msg-config-listener-v3-filterchainmatch)
  // effectively matching all incoming connections
  Matcher matcher = 3;

  // HttpGateway creates a FilterChain with an HttpConnectionManager
  HttpGateway http_gateway = 4;
}